# autofolder

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: accumulator.rs  adder.rs  dynfolder.rs  dynreduce.rs  implfolder.rs  implreduce.rs  lib.rs  minmax.rs  minmaxnum.rs
tests/: accumulator_tests.rs  dynfolter_tests.rs  dynreduce_tests.rs  implfolder_tests.rs  implreduce_tests.rs  max_tests.rs  min_max_tests.rs  minmax_tests.rs  minmaxnum_tests.rs  strnum.rs
