[package]
name = "autofolder"
description = "Single-element folding wrapper"
version = "0.5.0"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/autofolder"
repository = "https://github.com/lpenz/autofolder"
categories = ["rust-patterns"]
keywords = ["fold", "reduce", "container", "ad-hoc"]

[dependencies]
num = { version = "0.4.0", optional = true }

[features]
num = ["dep:num"]

[dev-dependencies]
anyhow = "1.0.68"
derive_more = "0.99.17"
