[package]
name = "autofolder"
description = "Single-element folding wrapper"
version = "0.5.1"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/autofolder"
repository = "https://github.com/lpenz/autofolder"
categories = ["rust-patterns"]
keywords = ["fold", "reduce", "container", "ad-hoc"]

[dependencies]
num = { version = "0.4.3", optional = true }

[features]
num = ["dep:num"]

[dev-dependencies]
anyhow = "1.0.89"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
